--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<h1>Random Quote Generator</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles.css">
+    <title>Quote Generatot</title>
+</head>
+
+<body>
+    <div class="quote-coantainer" id="quote-coantainer">
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote"></span>
+        </div>
+        <div class="quote-author">
+            <span id="author"></span>
+        </div>
+        <div class="buttons-container">
+            <button class="twitter-btn" id="twitter" title="Tweet This!">
+                <i class="fab fa-twitter"></i>
+            </button>
+            <button id="new-quote" title="Click to get a new quote">
+                New Quote
+            </button>
+        </div>
+    </div>
+    <div class="loader" id="loader"></div>
+    <script src="app.js"></script>
+</body>
+
+</html>
